<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <!-- ================= AUTENTICAZIONE ================= -->

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.goride.ui.auth.LoginFragment"
        android:label="Accedi"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_to_map"
            app:destination="@id/mapFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />

        <action
            android:id="@+id/action_login_to_forgotPassword"
            app:destination="@id/forgotPasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.goride.ui.auth.RegisterFragment"
        android:label="Registrati"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_register_to_map"
            app:destination="@id/mapFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.example.goride.ui.auth.ForgotPasswordFragment"
        android:label="Recupera password"
        tools:layout="@layout/fragment_forgot_password" />

    <!-- ================= MAPPA E CORSA ================= -->

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.goride.ui.map.MapFragment"
        android:label="@string/mappa_titolo"
        tools:layout="@layout/fragment_map">

        <action
            android:id="@+id/action_map_to_vehicleDetail"
            app:destination="@id/vehicleDetailFragment" />
    </fragment>

    <dialog
        android:id="@+id/vehicleDetailFragment"
        android:name="com.example.goride.ui.map.VehicleDetailFragment"
        tools:layout="@layout/fragment_vehicle_detail">

        <argument
            android:name="vehicle"
            app:argType="com.example.goride.data.model.Vehicle" />

        <action
            android:id="@+id/action_vehicleDetail_to_ride"
            app:destination="@id/rideFragment"
            app:popUpTo="@id/mapFragment" />
    </dialog>

    <fragment
        android:id="@+id/rideFragment"
        android:name="com.example.goride.ui.ride.RideFragment"
        android:label="Corsa in corso"
        tools:layout="@layout/fragment_ride">

        <argument
            android:name="vehicle"
            app:argType="com.example.goride.data.model.Vehicle" />

        <action
            android:id="@+id/action_ride_to_map"
            app:destination="@id/mapFragment"
            app:popUpTo="@id/mapFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- ================= STORICO ================= -->

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.goride.ui.history.HistoryFragment"
        android:label="@string/storico_titolo"
        tools:layout="@layout/fragment_history">

        <action
            android:id="@+id/action_history_to_rideDetail"
            app:destination="@id/rideDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/rideDetailFragment"
        android:name="com.example.goride.ui.history.RideDetailFragment"
        android:label="@string/dettaglio_corsa_titolo"
        tools:layout="@layout/fragment_ride_detail">

        <argument
            android:name="ride"
            app:argType="com.example.goride.data.model.Ride" />
    </fragment>

    <!-- ================= COMMUNITY ================= -->

    <fragment
        android:id="@+id/communityFragment"
        android:name="com.example.goride.ui.community.CommunityFragment"
        android:label="@string/community_titolo"
        tools:layout="@layout/fragment_community">

        <action
            android:id="@+id/action_community_to_newReview"
            app:destination="@id/newReviewFragment" />
    </fragment>

    <fragment
        android:id="@+id/newReviewFragment"
        android:name="com.example.goride.ui.community.NewReviewFragment"
        android:label="@string/nuova_recensione_titolo"
        tools:layout="@layout/fragment_new_review" />

    <!-- ================= PROFILO ================= -->

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.goride.ui.auth.ProfileFragment"
        android:label="@string/profilo_titolo"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>












